# aokiji

./: README.md
frontend/: .gitignore  Cargo.toml
frontend/aokiji/: 1.json  2.json  Cargo.toml  Dioxus.toml
frontend/aokiji/assets/: app.css  icon.icns  satoshi.css
frontend/aokiji/assets/styling/: main.css
frontend/aokiji/src/: dashboard.rs  home.rs  main.rs
frontend/desktop/: Cargo.toml  account.json  account_1.json  config.json
frontend/desktop/assets/: main.css  satoshi.css
frontend/desktop/assets/styling/: main.css
frontend/desktop/src/: alert.rs  dashboard.rs  home.rs  main.rs
frontend/routes/: Cargo.toml
frontend/routes/src/: lib.rs  nano.rs
frontend/ui/: Cargo.toml
frontend/ui/assets/styling/: account.css  main.css  wallet.css
frontend/ui/src/: account.rs  dashboard.rs  hero.rs  home.rs  lib.rs  login.rs  wallet.rs
frontend/ui/src/account/: account.rs  mod.rs
frontend/web/: Cargo.toml
frontend/web/assets/: main.css
frontend/web/src/: main.rs
