[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
routes = { workspace = true }
reqwest = { version = "0.12.15", features = ["json"] }
frost-sig = { git = "https://github.com/diogogomesaraujo/frost-sig.git" }
dioxus-material-icons = "3.0.0"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
